qt6/gen_qimage.h

class QColor;
class QImage;
class QPoint;
class QRect;
class QSize;
class QSizeF;
class QVariant;
typedef struct QByteArrayView QByteArrayView;
typedef struct QColor QColor;
typedef struct QIODevice QIODevice;
typedef struct QImage QImage;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QSize QSize;
typedef struct QSizeF QSizeF;
typedef struct QTransform QTransform;
typedef struct QVariant QVariant;
QImage* QImage_scaled2(const QImage* self, QSize* s, int aspectMode);
QImage* QImage_scaled32(const QImage* self, QSize* s, int aspectMode, int mode);
QImage* QImage_scaledToWidth2(const QImage* self, int w, int mode);
QImage* QImage_scaledToHeight2(const QImage* self, int h, int mode);
QImage* QImage_transformed2(const QImage* self, QTransform* matrix, int mode);
QImage* QImage_mirrored1(const QImage* self, bool horizontally);
QImage* QImage_mirrored2(const QImage* self, bool horizontally, bool vertically);
void QImage_mirror1(QImage* self, bool horizontally);
void QImage_mirror2(QImage* self, bool horizontally, bool vertically);
void QImage_invertPixels1(QImage* self, int param1);
bool QImage_load2(QImage* self, struct miqt_string fileName, const char* format);
bool QImage_loadFromData22(QImage* self, QByteArrayView* data, const char* format);
bool QImage_loadFromData3(QImage* self, const unsigned char* buf, int len, const char* format);
bool QImage_loadFromData23(QImage* self, struct miqt_string data, const char* format);
bool QImage_save2(const QImage* self, struct miqt_string fileName, const char* format);
bool QImage_save3(const QImage* self, struct miqt_string fileName, const char* format, int quality);
bool QImage_save22(const QImage* self, QIODevice* device, const char* format);
bool QImage_save32(const QImage* self, QIODevice* device, const char* format, int quality);
QImage* QImage_fromData22(QByteArrayView* data, const char* format);
QImage* QImage_fromData3(const unsigned char* data, int size, const char* format);
QImage* QImage_fromData23(struct miqt_string data, const char* format);
struct miqt_string QImage_text1(const QImage* self, struct miqt_string key);
bool QImage_override_virtual_devType(void* self, intptr_t slot);
int QImage_virtualbase_devType(const void* self);
bool QImage_override_virtual_paintEngine(void* self, intptr_t slot);
QPaintEngine* QImage_virtualbase_paintEngine(const void* self);
bool QImage_override_virtual_metric(void* self, intptr_t slot);
int QImage_virtualbase_metric(const void* self, int metric);
bool QImage_override_virtual_initPainter(void* self, intptr_t slot);
void QImage_virtualbase_initPainter(const void* self, QPainter* painter);
bool QImage_override_virtual_redirected(void* self, intptr_t slot);
QPaintDevice* QImage_virtualbase_redirected(const void* self, QPoint* offset);
bool QImage_override_virtual_sharedPainter(void* self, intptr_t slot);
QPainter* QImage_virtualbase_sharedPainter(const void* self);
void QImage_delete(QImage* self);