qt6/gen_qimage.nim

proc fcQImage_scaled2(self: pointer, s: pointer, aspectMode: cint): pointer {.importc: "QImage_scaled2".}
proc fcQImage_scaled32(self: pointer, s: pointer, aspectMode: cint, mode: cint): pointer {.importc: "QImage_scaled32".}
proc fcQImage_scaledToWidth2(self: pointer, w: cint, mode: cint): pointer {.importc: "QImage_scaledToWidth2".}
proc fcQImage_scaledToHeight2(self: pointer, h: cint, mode: cint): pointer {.importc: "QImage_scaledToHeight2".}
proc fcQImage_transformed2(self: pointer, matrix: pointer, mode: cint): pointer {.importc: "QImage_transformed2".}
proc fcQImage_mirrored1(self: pointer, horizontally: bool): pointer {.importc: "QImage_mirrored1".}
proc fcQImage_mirrored2(self: pointer, horizontally: bool, vertically: bool): pointer {.importc: "QImage_mirrored2".}
proc fcQImage_mirror1(self: pointer, horizontally: bool): void {.importc: "QImage_mirror1".}
proc fcQImage_mirror2(self: pointer, horizontally: bool, vertically: bool): void {.importc: "QImage_mirror2".}
proc fcQImage_invertPixels1(self: pointer, param1: cint): void {.importc: "QImage_invertPixels1".}
proc fcQImage_load2(self: pointer, fileName: struct_miqt_string, format: cstring): bool {.importc: "QImage_load2".}
proc fcQImage_loadFromData22(self: pointer, data: pointer, format: cstring): bool {.importc: "QImage_loadFromData22".}
proc fcQImage_loadFromData3(self: pointer, buf: ptr uint8, len: cint, format: cstring): bool {.importc: "QImage_loadFromData3".}
proc fcQImage_loadFromData23(self: pointer, data: struct_miqt_string, format: cstring): bool {.importc: "QImage_loadFromData23".}
proc fcQImage_save2(self: pointer, fileName: struct_miqt_string, format: cstring): bool {.importc: "QImage_save2".}
proc fcQImage_save3(self: pointer, fileName: struct_miqt_string, format: cstring, quality: cint): bool {.importc: "QImage_save3".}
proc fcQImage_save22(self: pointer, device: pointer, format: cstring): bool {.importc: "QImage_save22".}
proc fcQImage_save32(self: pointer, device: pointer, format: cstring, quality: cint): bool {.importc: "QImage_save32".}
proc fcQImage_fromData22(data: pointer, format: cstring): pointer {.importc: "QImage_fromData22".}
proc fcQImage_fromData3(data: ptr uint8, size: cint, format: cstring): pointer {.importc: "QImage_fromData3".}
proc fcQImage_fromData23(data: struct_miqt_string, format: cstring): pointer {.importc: "QImage_fromData23".}
proc fcQImage_text1(self: pointer, key: struct_miqt_string): struct_miqt_string {.importc: "QImage_text1".}
proc fQImage_virtualbase_devType(self: pointer, ): cint{.importc: "QImage_virtualbase_devType".}
proc fcQImage_override_virtual_devType(self: pointer, slot: int) {.importc: "QImage_override_virtual_devType".}
proc fQImage_virtualbase_paintEngine(self: pointer, ): pointer{.importc: "QImage_virtualbase_paintEngine".}
proc fcQImage_override_virtual_paintEngine(self: pointer, slot: int) {.importc: "QImage_override_virtual_paintEngine".}
proc fQImage_virtualbase_metric(self: pointer, metric: cint): cint{.importc: "QImage_virtualbase_metric".}
proc fcQImage_override_virtual_metric(self: pointer, slot: int) {.importc: "QImage_override_virtual_metric".}
proc fQImage_virtualbase_initPainter(self: pointer, painter: pointer): void{.importc: "QImage_virtualbase_initPainter".}
proc fcQImage_override_virtual_initPainter(self: pointer, slot: int) {.importc: "QImage_override_virtual_initPainter".}
proc fQImage_virtualbase_redirected(self: pointer, offset: pointer): pointer{.importc: "QImage_virtualbase_redirected".}
proc fcQImage_override_virtual_redirected(self: pointer, slot: int) {.importc: "QImage_override_virtual_redirected".}
proc fQImage_virtualbase_sharedPainter(self: pointer, ): pointer{.importc: "QImage_virtualbase_sharedPainter".}
proc fcQImage_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QImage_override_virtual_sharedPainter".}
proc fcQImage_delete(self: pointer) {.importc: "QImage_delete".}


func init*(T: type QImage, h: ptr cQImage): QImage =
  T(h: h)
proc create*(T: type QImage, ): QImage =

  QImage.init(fcQImage_new())
proc create*(T: type QImage, size: gen_qsize.QSize, format: QImageFormat): QImage =

  QImage.init(fcQImage_new2(size.h, cint(format)))
proc create*(T: type QImage, width: cint, height: cint, format: QImageFormat): QImage =

  QImage.init(fcQImage_new3(width, height, cint(format)))
proc create*(T: type QImage, data: ptr uint8, width: cint, height: cint, format: QImageFormat): QImage =

  QImage.init(fcQImage_new4(data, width, height, cint(format)))
proc create2*(T: type QImage, data: ptr uint8, width: cint, height: cint, format: QImageFormat): QImage =

  QImage.init(fcQImage_new5(data, width, height, cint(format)))
proc create*(T: type QImage, data: ptr uint8, width: cint, height: cint, bytesPerLine: int64, format: QImageFormat): QImage =

  QImage.init(fcQImage_new6(data, width, height, bytesPerLine, cint(format)))
proc create2*(T: type QImage, data: ptr uint8, width: cint, height: cint, bytesPerLine: int64, format: QImageFormat): QImage =

  QImage.init(fcQImage_new7(data, width, height, bytesPerLine, cint(format)))
proc create*(T: type QImage, fileName: string): QImage =

  QImage.init(fcQImage_new8(struct_miqt_string(data: fileName, len: csize_t(len(fileName)))))
proc create*(T: type QImage, param1: QImage): QImage =

  QImage.init(fcQImage_new9(param1.h))
proc create*(T: type QImage, fileName: string, format: cstring): QImage =

  QImage.init(fcQImage_new10(struct_miqt_string(data: fileName, len: csize_t(len(fileName))), format))
proc operatorAssign*(self: QImage, param1: QImage): void =

  fcQImage_operatorAssign(self.h, param1.h)

proc swap*(self: QImage, other: QImage): void =

  fcQImage_swap(self.h, other.h)

proc isNull*(self: QImage, ): bool =

  fcQImage_isNull(self.h)

proc devType*(self: QImage, ): cint =

  fcQImage_devType(self.h)

proc operatorEqual*(self: QImage, param1: QImage): bool =

  fcQImage_operatorEqual(self.h, param1.h)

proc operatorNotEqual*(self: QImage, param1: QImage): bool =

  fcQImage_operatorNotEqual(self.h, param1.h)

proc ToQVariant*(self: QImage, ): gen_qvariant.QVariant =

  gen_qvariant.QVariant(h: fcQImage_ToQVariant(self.h))

proc detach*(self: QImage, ): void =

  fcQImage_detach(self.h)

proc isDetached*(self: QImage, ): bool =

  fcQImage_isDetached(self.h)

proc copy*(self: QImage, ): QImage =

  QImage(h: fcQImage_copy(self.h))

proc copy2*(self: QImage, x: cint, y: cint, w: cint, h: cint): QImage =

  QImage(h: fcQImage_copy2(self.h, x, y, w, h))

proc format*(self: QImage, ): QImageFormat =

  QImageFormat(fcQImage_format(self.h))

proc convertToFormat*(self: QImage, f: QImageFormat): QImage =

  QImage(h: fcQImage_convertToFormat(self.h, cint(f)))

proc convertToFormat2*(self: QImage, f: QImageFormat, colorTable: seq[cuint]): QImage =

  var colorTable_CArray = newSeq[cuint](len(colorTable))
  for i in 0..<len(colorTable):
    colorTable_CArray[i] = colorTable[i]

  QImage(h: fcQImage_convertToFormat2(self.h, cint(f), struct_miqt_array(len: csize_t(len(colorTable)), data: if len(colorTable) == 0: nil else: addr(colorTable_CArray[0]))))

proc reinterpretAsFormat*(self: QImage, f: QImageFormat): bool =

  fcQImage_reinterpretAsFormat(self.h, cint(f))

proc convertedTo*(self: QImage, f: QImageFormat): QImage =

  QImage(h: fcQImage_convertedTo(self.h, cint(f)))

proc convertTo*(self: QImage, f: QImageFormat): void =

  fcQImage_convertTo(self.h, cint(f))

proc width*(self: QImage, ): cint =

  fcQImage_width(self.h)

proc height*(self: QImage, ): cint =

  fcQImage_height(self.h)

proc size*(self: QImage, ): gen_qsize.QSize =

  gen_qsize.QSize(h: fcQImage_size(self.h))

proc rect*(self: QImage, ): gen_qrect.QRect =

  gen_qrect.QRect(h: fcQImage_rect(self.h))

proc depth*(self: QImage, ): cint =

  fcQImage_depth(self.h)

proc colorCount*(self: QImage, ): cint =

  fcQImage_colorCount(self.h)

proc bitPlaneCount*(self: QImage, ): cint =

  fcQImage_bitPlaneCount(self.h)

proc color*(self: QImage, i: cint): cuint =

  fcQImage_color(self.h, i)

proc setColor*(self: QImage, i: cint, c: cuint): void =

  fcQImage_setColor(self.h, i, c)

proc setColorCount*(self: QImage, colorCount: cint): void =

  fcQImage_setColorCount(self.h, colorCount)

proc allGray*(self: QImage, ): bool =

  fcQImage_allGray(self.h)

proc isGrayscale*(self: QImage, ): bool =

  fcQImage_isGrayscale(self.h)

proc bits*(self: QImage, ): ptr uint8 =

  fcQImage_bits(self.h)

proc bits2*(self: QImage, ): ptr uint8 =

  fcQImage_bits2(self.h)

proc constBits*(self: QImage, ): ptr uint8 =

  fcQImage_constBits(self.h)

proc sizeInBytes*(self: QImage, ): int64 =

  fcQImage_sizeInBytes(self.h)

proc scanLine*(self: QImage, param1: cint): ptr uint8 =

  fcQImage_scanLine(self.h, param1)

proc scanLineWithInt*(self: QImage, param1: cint): ptr uint8 =

  fcQImage_scanLineWithInt(self.h, param1)

proc constScanLine*(self: QImage, param1: cint): ptr uint8 =

  fcQImage_constScanLine(self.h, param1)

proc bytesPerLine*(self: QImage, ): int64 =

  fcQImage_bytesPerLine(self.h)

proc valid*(self: QImage, x: cint, y: cint): bool =

  fcQImage_valid(self.h, x, y)

proc validWithPt*(self: QImage, pt: gen_qpoint.QPoint): bool =

  fcQImage_validWithPt(self.h, pt.h)

proc pixelIndex*(self: QImage, x: cint, y: cint): cint =

  fcQImage_pixelIndex(self.h, x, y)

proc pixelIndexWithPt*(self: QImage, pt: gen_qpoint.QPoint): cint =

  fcQImage_pixelIndexWithPt(self.h, pt.h)

proc pixel*(self: QImage, x: cint, y: cint): cuint =

  fcQImage_pixel(self.h, x, y)

proc pixelWithPt*(self: QImage, pt: gen_qpoint.QPoint): cuint =

  fcQImage_pixelWithPt(self.h, pt.h)

proc setPixel*(self: QImage, x: cint, y: cint, index_or_rgb: cuint): void =

  fcQImage_setPixel(self.h, x, y, index_or_rgb)

proc setPixel2*(self: QImage, pt: gen_qpoint.QPoint, index_or_rgb: cuint): void =

  fcQImage_setPixel2(self.h, pt.h, index_or_rgb)

proc pixelColor*(self: QImage, x: cint, y: cint): gen_qcolor.QColor =

  gen_qcolor.QColor(h: fcQImage_pixelColor(self.h, x, y))

proc pixelColorWithPt*(self: QImage, pt: gen_qpoint.QPoint): gen_qcolor.QColor =

  gen_qcolor.QColor(h: fcQImage_pixelColorWithPt(self.h, pt.h))

proc setPixelColor*(self: QImage, x: cint, y: cint, c: gen_qcolor.QColor): void =

  fcQImage_setPixelColor(self.h, x, y, c.h)

proc setPixelColor2*(self: QImage, pt: gen_qpoint.QPoint, c: gen_qcolor.QColor): void =

  fcQImage_setPixelColor2(self.h, pt.h, c.h)

proc colorTable*(self: QImage, ): seq[cuint] =

  var v_ma = fcQImage_colorTable(self.h)
  var vx_ret = newSeq[cuint](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[cuint]](v_ma.data)
  for i in 0 ..< v_ma.len:
    vx_ret[i] = v_outCast[i]
  vx_ret

proc setColorTable*(self: QImage, colors: seq[cuint]): void =

  var colors_CArray = newSeq[cuint](len(colors))
  for i in 0..<len(colors):
    colors_CArray[i] = colors[i]

  fcQImage_setColorTable(self.h, struct_miqt_array(len: csize_t(len(colors)), data: if len(colors) == 0: nil else: addr(colors_CArray[0])))

proc devicePixelRatio*(self: QImage, ): float64 =

  fcQImage_devicePixelRatio(self.h)

proc setDevicePixelRatio*(self: QImage, scaleFactor: float64): void =

  fcQImage_setDevicePixelRatio(self.h, scaleFactor)

proc deviceIndependentSize*(self: QImage, ): gen_qsize.QSizeF =

  gen_qsize.QSizeF(h: fcQImage_deviceIndependentSize(self.h))

proc fill*(self: QImage, pixel: cuint): void =

  fcQImage_fill(self.h, pixel)

proc fillWithColor*(self: QImage, color: gen_qcolor.QColor): void =

  fcQImage_fillWithColor(self.h, color.h)

proc fill2*(self: QImage, color: gen_qnamespace.GlobalColor): void =

  fcQImage_fill2(self.h, cint(color))

proc hasAlphaChannel*(self: QImage, ): bool =

  fcQImage_hasAlphaChannel(self.h)

proc setAlphaChannel*(self: QImage, alphaChannel: QImage): void =

  fcQImage_setAlphaChannel(self.h, alphaChannel.h)

proc createAlphaMask*(self: QImage, ): QImage =

  QImage(h: fcQImage_createAlphaMask(self.h))

proc createHeuristicMask*(self: QImage, ): QImage =
